--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+#project temp files
+yatube/media/
+
+# Django stuff:
+*.log
+db.sqlite3
+db.sqlite3-journal
+db.sqlite3:Zone.Identifier
+local_settings.py
+
+# Папки, создаваемые средой разработки
+.idea
+.DS_Store
+.AppleDouble
+.LSOverride
+
+*.sublime-project
+*.sublime-workspace
+
+.vscode/
+*.code-workspace
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -54,13 +77,6 @@ coverage.xml
 # Translations
 *.mo
 *.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-db.sqlite3:Zone.Identifier
 
 # Flask stuff:
 instance/
@@ -128,18 +144,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
-# Папки, создаваемые средой разработки
-.idea
-.DS_Store
-.AppleDouble
-.LSOverride
-
-*.sublime-project
-*.sublime-workspace
-
-.vscode/
-*.code-workspace
 
 # Local History for Visual Studio Code
 .history/
